Initially hide sidebar. Fix animation overflow issue.

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -5,6 +5,7 @@
 .sidebar {
   position: fixed;
   top: 0px;
+  left: -25%;
   padding-top: 10%;
   padding-left: 5px;
   padding-right: 5px;
